--- a/packages/plugin-highlight-ssr/package.json
+++ b/packages/plugin-highlight-ssr/package.json
@@ -28,6 +28,7 @@
     "locales"
   ],
   "dependencies": {
+    "deepmerge": "^4.2.2",
     "rehype-highlight": "^5.0.2"
   },
   "devDependencies": {
